--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "@supabase/supabase-js": "^2.33.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.1",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
@@ -14,9 +16,11 @@
     "react-fast-marquee": "^1.3.5",
     "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^6.4.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.2",
     "redux": "^4.2.0",
+    "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
